--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/rajt26/crud-node-express-mongo#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.3",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.2"
   }
